update theme resolve spacing issue for images.

--- a/components/_patterns/00-base/layouts/item/_flexbox__item.scss
+++ b/components/_patterns/00-base/layouts/item/_flexbox__item.scss
@@ -68,7 +68,7 @@
       flex: 0 1 33%;
 
       @include breakpoint(max-width $medium) {
-        flex: 0 0 33%;
+        flex: 0 0 15%;
       }
     }
 
